[package]
name = "crates_bot"
version = "0.1.0"
authors = ["Gustavo Aguiar <gugahoa@gmail.com>"]
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", branch = "add_inline_answer_support" }
futures = "0.1.7"
tokio-core = "0.1.2"
reqwest = "0.9"
serde_json = "1.0"

serde = { version = "1.0", features = ["derive"]}


[workspace]
