[package]
name = "crates_bot"
version = "0.1.0"
authors = ["Gustavo Aguiar <gugahoa@gmail.com>"]
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
futures = "0.1"
tokio-core = "0.1"
reqwest = { version = "0.10", features = ["json"]}
serde_json = "1.0"

serde = { version = "1.0", features = ["derive"] }


[workspace]
